# app/docs/swagger.yaml
@@ -74,8 +74,8 @@ paths:
       produces:
       - application/json
       responses:
-        "220":
-          description: ""
+        "202":
+          description: Accepted
           schema:
             allOf:
             - $ref: '#/definitions/entities.APIResponse'
